src/test/ui/const-generics/const_evaluatable_checked/different-fn.stderr
error: unconstrained generic constant
  --> $DIR/different-fn.rs:10:9
   |
LL |     [0; size_of::<Foo<T>>()]
   |         ^^^^^^^^^^^^^^^^^^^
   |
help: try adding a `where` bound using this expression: `where [u8; size_of::<Foo<T>>()]: Sized`
  --> $DIR/different-fn.rs:10:9
   |
LL |     [0; size_of::<Foo<T>>()]
   |         ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

